--- a/index.html
+++ b/index.html
@@ -127,11 +127,31 @@
       text-shadow: -2px -2px 0 white, 2px -2px 0 white, -2px 2px 0 white, 2px 2px 0 white;
     }
 
+    #gameIntroScene {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-image: url(짱구움짤.gif);
+      background-size: 100% 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      /* 수직 가운데 정렬 */
+      align-items: center;
+      /* 수평 가운데 정렬 */
+      text-align: center;
+      color: rebeccapurple;
+      font-size: 60px;
+      text-shadow: -2px -2px 0 white, 2px -2px 0 white, -2px 2px 0 white, 2px 2px 0 white;
+    }
+
     #resetButton {
       background-color: red;
       color: white;
       width: 100px;
       height: 50px;
+      font-size: 20px;
+      text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black, 2px 2px 0 black;
     }
 
     #clearButton {
@@ -139,6 +159,17 @@
       color: white;
       width: 100px;
       height: 50px;
+      font-size: 16px;
+      text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black, 2px 2px 0 black;
+    }
+
+    #introButton {
+      background-color: purple;
+      color: white;
+      width: 100px;
+      height: 50px;
+      font-size: 30px;
+      text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black, 2px 2px 0 black;
     }
 
     #bg {
@@ -146,19 +177,10 @@
       width: 1000px;
     }
 
-    #title {
-      position: absolute;
-      top: 180px;
-      color: rebeccapurple;
-      text-shadow: -5px -5px 0 white, 5px -5px 0 white, -5px 5px 0 white, 5px 5px 0 white;
-      font-size: 40px;
-      size: 100% 100%;
-    }
   </style>
 </head>
 
 <body>
-  <div id="title"><h1>훈발놈 피하기</h1></div>
   <div id="stage">
     <img id="player" src="짱구움짤.gif">
     <img id="enemy1" src="훈발놈.png">
@@ -175,7 +197,12 @@
       <br>
       <button id="clearButton" onclick="gameclear()">다시할래..?</button>
     </div>
-    TIME : <span id="timeText">00:00</span>
+    <div id="gameIntroScene">
+      <b>훈발놈 피하기</b>
+      <br>
+      <button id="introButton" onclick="gameReset()">Start</button>
+    </div>
+    <span id="timeName">TIME : </span><span id="timeText">00:00</span>
   </div>
 
   <script>
@@ -185,6 +212,7 @@
     const enemy3 = $('#enemy3');
     const enemy4 = $('#enemy4');
     const timeText = $('#timeText');
+    const timeName = $('#timeName');
 
     let time;
 
@@ -280,6 +308,8 @@
       enemy2.show();
       enemy3.show();
       enemy4.show();
+      timeText.show();
+      timeName.show();
       isGameOver = false;
       speed1 = getRandomValue(3, 6);
       speed2 = getRandomValue(3, 6);
@@ -305,6 +335,7 @@
 
       // 게임오버 화면 없애기
       $('#gameOverScene').css('visibility', 'hidden');
+      $('#gameIntroScene').css('visibility', 'hidden');
     }
 
 
@@ -473,7 +504,14 @@
     setInterval(onUpdate, 1000 / 60)
 
     function startGame() {
-      gameReset(); // Game reset
+      timeName.hide();
+      timeText.hide();
+      player.hide();
+      enemy1.hide();
+      enemy2.hide();
+      enemy3.hide();
+      enemy4.hide();
+      isGameOver = true;
     }
 
     startGame();
